--- a/src/scss/components/_featured.scss
+++ b/src/scss/components/_featured.scss
@@ -16,6 +16,10 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
+
+    @include media(tablet) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__item {
@@ -37,9 +41,8 @@
   }
 
   &__image {
+    height: auto;
     overflow: hidden;
-    height: 100%;
-    max-height: 228px;
     object-fit: fill;
   }
 
