--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -24,6 +24,7 @@
   // color
   --color-white: #fff;
   --color-dark: #2C2E35;
+  --color-black: #2C2E35;
   --color-green: #9CDB7E;
   --color-light-gray: rgba(44, 46, 53, 0.36);
   --color-lighter-gray: rgba(44, 46, 53, 0.16);
