--- a/src/scss/components/_designers.scss
+++ b/src/scss/components/_designers.scss
@@ -4,6 +4,10 @@
 .designers {
   padding: 86px 0;
 
+  @include media(mobile-s) {
+    padding: 30px 0;
+  }
+
   h2 {
     margin-bottom: 48px;
     font-family: var(--font-family-bold);
@@ -15,6 +19,10 @@
   &__list {
     display: flex;
     align-items: center;
+
+    @include media(mobile-s) {
+      flex-direction: column;
+    }
   }
 
   &__item {
@@ -38,6 +46,11 @@
 
     &:not(:last-child) {
       margin-right: 24px;
+
+      @include media(mobile-s) {
+        margin-right: 0;
+        margin-bottom: 10px;
+      }
     }
 
     &:hover .designers__content,
@@ -51,7 +64,8 @@
   }
 
   &__content {
-    width: 286px;
+    max-width: 286px;
+    height: 100%;
     position: absolute;
     padding: 26px 24px;
     top: 0;
