--- a/src/scss/components/_inspired.scss
+++ b/src/scss/components/_inspired.scss
@@ -4,6 +4,10 @@
 .inspired {
   padding: 56px 0;
 
+  @include media(mobile-l) {
+    padding: 30px 0;
+  }
+
   h2 {
     margin-bottom: 48px;
     font-family: var(--font-family-bold);
@@ -14,14 +18,34 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(2,minmax(0,1fr));
-    gap: 275px 48px;
+    grid-template-columns: repeat(2,1fr);
+    gap: 48px;
     position: relative;
     justify-items: center;
+
+    @include media(mobile-l) {
+      grid-template-columns: repeat(1,1fr);
+    }
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__item {
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+
+    &:not(:last-of-type) {
+      margin-bottom: 275px;
+
+      @include media(mobile-l) {
+        margin-bottom: 45px;
+      }
+    }
     h3 {
       margin-bottom: 12px;
       font-size: 20px;
@@ -30,11 +54,6 @@
       font-family: var(--font-family-semibold);
     }
 
-    &:last-child {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-    }
   }
 
   &__image {
