--- a/src/scss/pages/about/_crafting.scss
+++ b/src/scss/pages/about/_crafting.scss
@@ -13,18 +13,37 @@
     margin-bottom: 48px;
     font-family: var(--font-family-bold);
     font-size: 36px;
-    line-height: 46.99px;
     color: var(--color-dark);
   }
 
   p {
     font-family: var(--font-family-primary);
     font-size: 24px;
-    line-height: 36px;
     color: var(--color-dark);
   }
 
   &__image {
     margin-right: 48px;
+  }
+
+  @include media(tablet) {
+    padding: 30px 0;
+
+    &__content {
+      flex-direction: column;
+    }
+
+    h2 {
+      font-size: 24px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
+    &__image {
+      margin-right: 0;
+      margin-bottom: 20px;
+    }
   }
 }
