--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -27,7 +27,7 @@
       margin-right: 16px;
     }
 
-    @include media(tablet) {
+    @include media(tablet-wide) {
       max-width: 250px;
     }
   }
