--- a/src/scss/components/_inspired.scss
+++ b/src/scss/components/_inspired.scss
@@ -12,7 +12,6 @@
     margin-bottom: 48px;
     font-family: var(--font-family-bold);
     font-size: 36px;
-    line-height: 46.99px;
     color: var(--color-dark);
   }
 
@@ -49,7 +48,6 @@
     h3 {
       margin-bottom: 12px;
       font-size: 20px;
-      line-height: 26.1px;
       color: var(--color-dark);
       font-family: var(--font-family-semibold);
     }
@@ -68,10 +66,8 @@
         display: flex;
         justify-items: center;
 
-        &__item {
-          &:not(:last-child) {
-            margin-right: 48px;
-          }
+        @include media(mobile-l) {
+          flex-direction: column;
         }
       }
 
@@ -83,6 +79,13 @@
         cursor: pointer;
         margin-bottom: 255px;
 
+        @include media(tablet) {
+          margin-bottom: 100px;
+        }
+        @include media(mobile-l) {
+          margin-bottom: 45px;
+        }
+
         &:last-child {
           position: unset;
           margin-bottom: 0;
@@ -90,6 +93,14 @@
 
         &--right {
           margin-bottom: 281px;
+          
+          @include media(tablet) {
+            margin-bottom: 100px;
+          }
+          @include media(mobile-l) {
+            margin-bottom: 45px;
+          }
+
           &:last-child {
             margin-bottom: 0;
           }
@@ -105,7 +116,6 @@
 
     p {
       font-size: 20px;
-      line-height: 20px;
       color: var(--color-dark);
       font-family: var(--font-family-light);
     }
