--- a/src/scss/pages/about/_unveil.scss
+++ b/src/scss/pages/about/_unveil.scss
@@ -15,7 +15,6 @@
   h3 {
     font-family: var(--font-family-bold);
     font-size: 24px;
-    line-height: 36px;
     color: var(--color-dark);
     margin-bottom: 8px;
   }
@@ -23,7 +22,6 @@
   p {
     font-family: var(--font-family-light);
     font-size: 20px;
-    line-height: 30px;
     color: var(--color-dark);
   }
 
@@ -42,8 +40,32 @@
   &__number {
     font-family: var(--font-family-light);
     font-size: 48px;
-    line-height: 62.65px;
     color: var(--color-green);
+  }
+
+  @include media(tablet) {
+    padding: 30px 0;
+
+    h2 {
+      margin-bottom: 24px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+    &__item {
+      padding-bottom: 8px;
+      &:not(:last-child) {
+        margin-bottom: 8px;
+      }
+    }
+    &__number {
+      font-size: 24px;
+    }
   }
 
 }
