--- a/src/scss/pages/home/_request.scss
+++ b/src/scss/pages/home/_request.scss
@@ -90,6 +90,15 @@
         color: var(--color-white);
       }
     }
+
+    @include media(mobile-l) {
+      padding: 30px 0;
+
+      .request__content {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
   }
 
   &__content {
@@ -148,7 +157,7 @@
       color: var(--color-dark);
       margin-bottom: 0;
 
-      @include media(mobile-l) {
+     @include media(mobile-l) { 
         font-size: 60px;
       }
 
